// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should render with a different text string 1`] = `
<Spinner
  delay={200}
  name="spinner"
  text="Hello world!"
>
  <Spinner__Wrapper
    visible={false}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Spinner__Wrapper-hg0ct4-0",
            "isStatic": false,
            "lastClassName": "hyHIAb",
            "rules": Array [
              "visibility:",
              [Function],
              ";",
            ],
          },
          "displayName": "Spinner__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Spinner__Wrapper-hg0ct4-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      visible={false}
    >
      <span
        className="Spinner__Wrapper-hg0ct4-0 hyHIAb"
      >
        <ForwardRef
          fixedWidth={false}
          inverse={false}
          name="spinner"
          pulse={false}
          spin={true}
        >
          <i
            className="fa fa-spinner fa-spin"
          />
        </ForwardRef>
         
        Hello world!
      </span>
    </StyledComponent>
  </Spinner__Wrapper>
</Spinner>
`;

exports[`<Spinner /> should render without props 1`] = `
<Spinner
  delay={200}
  name="spinner"
  text="Loading..."
>
  <Spinner__Wrapper
    visible={false}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Spinner__Wrapper-hg0ct4-0",
            "isStatic": false,
            "lastClassName": "hyHIAb",
            "rules": Array [
              "visibility:",
              [Function],
              ";",
            ],
          },
          "displayName": "Spinner__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Spinner__Wrapper-hg0ct4-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      visible={false}
    >
      <span
        className="Spinner__Wrapper-hg0ct4-0 hyHIAb"
      >
        <ForwardRef
          fixedWidth={false}
          inverse={false}
          name="spinner"
          pulse={false}
          spin={true}
        >
          <i
            className="fa fa-spinner fa-spin"
          />
        </ForwardRef>
         
        Loading...
      </span>
    </StyledComponent>
  </Spinner__Wrapper>
</Spinner>
`;
